[gd_scene format=3 uid="uid://d2y22dtsfn7sr"]

[ext_resource type="Script" uid="uid://brruxpqotaeex" path="res://entities/enemies/priest.gd" id="1_p85cn"]
[ext_resource type="PackedScene" uid="uid://33l7m5l84rmv" path="res://animation/NPC/animations/villagerClerk.tscn" id="2_nmvpk"]
[ext_resource type="AudioStream" uid="uid://cp2ndf2hctda6" path="res://assets/audio/sfx/SFX_ThunderSpell.mp3" id="3_go57i"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_thg7q"]

[sub_resource type="PrismMesh" id="PrismMesh_p85cn"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_go57i"]
shading_mode = 0
specular_mode = 2
albedo_color = Color(7.8348074, 9.384245, 0, 1)
disable_receive_shadows = true

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nmvpk"]
radius = 5.3

[node name="Priest" type="CharacterBody3D" unique_id=249033166]
script = ExtResource("1_p85cn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1523429756]
shape = SubResource("CapsuleShape3D_thg7q")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." unique_id=1920977543]
avoidance_enabled = true

[node name="Area3D" type="Area3D" parent="." unique_id=153327195]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 0.5574732, 0)

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="Area3D" unique_id=1924084904]
transform = Transform3D(1, 0, -4.371139e-08, -4.371139e-08, 1.9106855e-15, -1, 0, 1, 1.9106855e-15, 0, 0, 0)
polygon = PackedVector2Array(3, 2, 3, -2, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D/CollisionPolygon3D" unique_id=2071043508]
transform = Transform3D(-1.7484555e-07, -3, 3.19156e-38, 4, -1.3113416e-07, 2.646978e-23, 0, -2.5055613e-22, 0.2, 1.5043552, 0, 0.91069376)
visible = false
mesh = SubResource("PrismMesh_p85cn")
surface_material_override/0 = SubResource("StandardMaterial3D_go57i")

[node name="SpotLight3D" type="SpotLight3D" parent="Area3D" unique_id=1138655494]
transform = Transform3D(-8.742278e-08, 0, -1, -1, 1.9106855e-15, 8.742278e-08, 1.9106855e-15, 1, 0, -1.2742119, -0.48622108, 5.236526e-08)
light_color = Color(1, 1, 0.3019608, 1)
light_energy = 16.0

[node name="NPCModel" type="Node3D" parent="." unique_id=1885080232]

[node name="Node3D" parent="NPCModel" unique_id=892760705 instance=ExtResource("2_nmvpk")]

[node name="detectplayer" type="Area3D" parent="." unique_id=1973164443]

[node name="CollisionShape3D" type="CollisionShape3D" parent="detectplayer" unique_id=1945565649]
shape = SubResource("CylinderShape3D_nmvpk")

[node name="Audio" type="Node" parent="." unique_id=1608467867]

[node name="ThunderSound" type="AudioStreamPlayer" parent="Audio" unique_id=1644477086]
stream = ExtResource("3_go57i")
volume_db = -16.0

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="body_entered" from="detectplayer" to="." method="_on_detectplayer_body_entered"]
[connection signal="body_exited" from="detectplayer" to="." method="_on_detectplayer_body_exited"]
